--- a/variazione_nft.ipynb
+++ b/variazione_nft.ipynb
@@ -189,13 +189,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convertire la colonna 'date' in formato datetime\n",
     "nft_trades_df['date'] = pd.to_datetime(nft_trades_df['date'])\n",
     "\n",
     "# Selezionare le righe con data successiva al 15 novembre 2020\n",
     "new_nft_trades = nft_trades_df[nft_trades_df['date'] > '2020-11-15']\n",
     "\n",
-    "# Ordinare il DataFrame per token_id e data\n",
     "filtrate_nft_trades_sorted = new_nft_trades.sort_values(by=['token_id', 'date'])"
    ]
   },
@@ -282,11 +280,9 @@
     "\n",
     "# Unire il prezzo medio con il DataFrame delle variazioni di prezzo\n",
     "price_changes_with_avg = price_changes.merge(average_prices, on='token_id', how='left')\n",
-    "\n",
-    "# Colonne desiderate\n",
     "result = price_changes_with_avg[['data_inizio', 'data_fine', 'token_id', 'price_trend', 'trend_change', 'prezzo_inizio', 'prezzo_fine', 'avg_price_avg', 'percentuale_variazione']]\n",
     "\n",
-    "# Definire la soglia per la percentuale di variazione\n",
+    "#soglia \n",
     "threshold = 90 \n",
     "\n",
     "# Filtrare i risultati che superano la soglia in positivo o negativo\n",
@@ -498,8 +494,6 @@
     "# Iterare sui picchi negativi e tracciare le variazioni di prezzo\n",
     "for _, row in picchi_negativi.iterrows():\n",
     "    plt.plot([row['data_inizio'], row['data_fine']], [row['prezzo_inizio'], row['prezzo_fine']], color='tomato', linestyle='-', marker='o', markersize=8, alpha=0.8)\n",
-    "    \n",
-    "    # Aggiungere l'etichetta della percentuale di variazione vicino al punto finale delle variazioni di prezzo\n",
     "    plt.text(row['data_fine'], row['prezzo_fine'], f\"{row['percentuale_variazione']:.2f}%\", color='tomato', fontsize=8, ha='right', va='bottom')\n",
     "\n",
     "# Formattare l'asse x per mostrare solo alcuni giorni a intervalli di 5 giorni\n",
@@ -564,11 +558,9 @@
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Impostare un intervallo più stretto per l'asse y\n",
+    "\n",
     "y_min = 0\n",
-    "# y_min = picchi_negativi['prezzo_fine'].min() - 500\n",
     "y_max = 20\n",
-    "# y_max = picchi_negativi['prezzo_inizio'].max() + 500\n",
     "plt.ylim(y_min, y_max)\n",
     "\n",
     "picchi_negativi['data_inizio'] = pd.to_datetime(picchi_negativi['data_inizio'])\n",
