--- a/analisi_inversa_NFT_tweet.ipynb
+++ b/analisi_inversa_NFT_tweet.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -502,27 +502,27 @@
      "output_type": "stream",
      "text": [
       "          data_inizio           data_fine  token_id price_trend  trend_change  \\\n",
-      "0 2021-08-15 07:05:16 2021-08-30 16:33:32      6563    positivo        152777   \n",
-      "1 2021-11-05 09:46:35 2021-11-05 18:42:28      4037    positivo        100401   \n",
-      "2 2021-02-25 14:23:29 2021-02-26 02:48:36     12247    positivo         17188   \n",
-      "3 2021-05-30 18:06:57 2021-06-01 06:39:14      8898    positivo        197896   \n",
-      "4 2021-08-25 04:45:19 2021-08-26 19:24:15      9728    positivo        214046   \n",
+      "0 2021-08-15 07:05:16 2021-08-30 16:33:32      6563    positivo        136359   \n",
+      "1 2021-11-05 09:46:35 2021-11-05 18:42:28      4037    positivo         91506   \n",
+      "2 2021-02-25 14:23:29 2021-02-26 02:48:36     12247    positivo         16568   \n",
+      "3 2021-05-30 18:06:57 2021-06-01 06:39:14      8898    positivo        174162   \n",
+      "4 2021-12-20 02:29:35 2022-01-18 23:35:20      4704    positivo        103908   \n",
       "\n",
       "   prezzo_inizio  prezzo_fine  avg_price_avg  percentuale_variazione  \\\n",
-      "0          0.130     888888.0   37043.645984            6.837599e+08   \n",
-      "1          1.400     150000.0    5360.899107            1.071419e+07   \n",
-      "2          3.000     430000.0   63690.436667            1.433323e+07   \n",
-      "3          0.640      64842.0    2176.416933            1.013146e+07   \n",
-      "4          0.006        269.0      11.790029            4.483233e+06   \n",
+      "0           0.13     888888.0   42335.513029            6.837599e+08   \n",
+      "1           1.40     150000.0    6526.103130            1.071419e+07   \n",
+      "2           3.00     430000.0   63690.436667            1.433323e+07   \n",
+      "3           0.64      64842.0    2418.027741            1.013146e+07   \n",
+      "4           0.05      15000.0    3038.580333            2.999990e+07   \n",
       "\n",
       "      durata  variazione_per_sec  numero_tweets  corr_pearson   p-value  \n",
       "0  1330096.0          514.068082         128501      0.997369  0.046189  \n",
       "1    32153.0          333.225071          25202      0.757791  0.242209  \n",
-      "2    44707.0          320.603783           8208      0.622860  0.261726  \n",
-      "3   131537.0           77.023670          15556     -0.518420  0.481580  \n",
-      "4   139136.0           32.221951          38622     -0.784620  0.425716  \n",
-      "Correlazione di Pearson: 0.6228604590658581\n",
-      "Valore p: 0.2617260644315706\n"
+      "2    44707.0          320.603783           8208     -0.513250  0.376458  \n",
+      "3   131537.0           77.023670          15556     -0.698739  0.301261  \n",
+      "4  2581545.0           11.620909         537653     -0.672743  0.530232  \n",
+      "Correlazione di Pearson (intero dataset): -0.5132495945701286\n",
+      "Valore p (intero dataset): 0.3764577398200427\n"
      ]
     }
    ],
@@ -534,7 +534,6 @@
     "for index, row in top_nft_positivi.iterrows():\n",
     "    data_inizio_variazione = row['data_inizio']\n",
     "    data_fine_variazione = row['data_fine']\n",
-    "    token_id = row['token_id']\n",
     "    \n",
     "    # Filtra i tweet che sono stati fatti nei giorni successivi all'inizio della variazione fino a 3 giorni dopo la fine della variazione\n",
     "    tweets_filtrati = tweets_sentiment[\n",
@@ -542,22 +541,43 @@
     "        (tweets_sentiment['created_at'] <= data_fine_variazione + pd.DateOffset(days=3))\n",
     "    ]\n",
     "    \n",
-    "    # Conta il numero totale di tweet per questo picco positivo\n",
     "    numero_totale_tweet = len(tweets_filtrati)\n",
-    "    \n",
-    "    # Aggiungi i dati alla lista per l'analisi di correlazione\n",
     "    num_tweet_per_picco.append(numero_totale_tweet)\n",
     "\n",
-    "# Aggiungi la lista come una nuova colonna al dataset top_nft_positivi\n",
     "top_nft_positivi['numero_tweets'] = num_tweet_per_picco\n",
     "\n",
-    "# Calcola la correlazione di Pearson tra variazione_per_sec e numero_tweets\n",
-    "correlation, p_value = pearsonr(top_nft_positivi['variazione_per_sec'], top_nft_positivi['numero_tweets'])\n",
+    "# Liste per memorizzare i risultati della correlazione locale\n",
+    "corr_pearson_list = []\n",
+    "p_value_list = []\n",
+    "\n",
+    "# Itera su ciascuna riga del dataset top_nft_positivi per calcolare la correlazione locale\n",
+    "for index, row in top_nft_positivi.iterrows():\n",
+    "    # Definisci una finestra attorno all'indice corrente (ad esempio, 2 righe prima e 2 righe dopo)\n",
+    "    start_index = max(0, index - 2)\n",
+    "    end_index = min(len(top_nft_positivi), index + 3)  # +3 per includere la riga corrente e due righe successive\n",
+    "    \n",
+    "    # Estrai il sotto-dataset per la finestra corrente\n",
+    "    window_df = top_nft_positivi.iloc[start_index:end_index]\n",
+    "    \n",
+    "    # Calcola la correlazione di Pearson per la finestra corrente\n",
+    "    if len(window_df) > 1:  # Calcola la correlazione solo se ci sono almeno 2 righe nella finestra\n",
+    "        correlation, p_value = pearsonr(window_df['variazione_per_sec'], window_df['numero_tweets'])\n",
+    "    else:\n",
+    "        correlation, p_value = (None, None)  # Se non ci sono abbastanza dati, imposta come None\n",
+    "    \n",
+    "    corr_pearson_list.append(correlation)\n",
+    "    p_value_list.append(p_value)\n",
+    "\n",
+    "# Aggiungi le liste come nuove colonne al dataset top_nft_positivi\n",
+    "top_nft_positivi['corr_pearson'] = corr_pearson_list\n",
+    "top_nft_positivi['p-value'] = p_value_list\n",
+    "\n",
+    "# Calcola la correlazione di Pearson per l'intero dataset\n",
+    "overall_correlation, overall_p_value = pearsonr(top_nft_positivi['variazione_per_sec'], top_nft_positivi['numero_tweets'])\n",
     "\n",
     "print(top_nft_positivi)\n",
-    "\n",
-    "print(f\"Correlazione di Pearson su tutto il dataframe: {correlation}\")\n",
-    "print(f\"Valore p su tutto il dataframe: {p_value}\")"
+    "print(f\"Correlazione di Pearson (intero dataset): {overall_correlation}\")\n",
+    "print(f\"Valore p (intero dataset): {overall_p_value}\")\n"
    ]
   },
   {
